# CoinBrowser

./: CMakeLists.txt  PAIRS_CACHE_README.md  README.md  coinfilterdialog.cpp  coinfilterdialog.h  coinfilterdialog.ui  constants.h  jsonfilemanager.cpp  jsonfilemanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pairscachemanager.cpp  pairscachemanager.h  resources.qrc  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  settingsmanager.cpp  settingsmanager.h  stocks.cpp  stocks.h  stocksdialog.cpp  stocksdialog.h  stocksdialog.ui  worker.cpp  worker.h
